# dekstop-client

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  startup_client.cpp
src/cache/: history_cacher.cpp  history_cacher.h  sqlitecache.h
src/client/: CMakeLists.txt  client.cpp  client.h  msgtype.h
src/client/cache/: icache.h
src/client/client/: client.cpp  client.h  msgtype.cpp
src/client/control/: control.h
src/client/gui/: channelswindow.h  channelswindow.ui  chatwindow.ui  mainwindow.h
src/client/gui/ChannelWidget/: channelwidget.ui
src/client/gui/CustomTextEdit/: customtextedit.cpp  customtextedit.h
src/client/gui/LoginWidget/: loginwidget.cpp  loginwidget.h  loginwidget.ui
src/client/gui/MessageWidget/: messagewidget.cpp
src/client/gui/delegate/: channeldelegate.h  chatdelegate.cpp
src/client/gui/models/: chatmodel.h
src/control/: control.cpp  control.h
src/gui/: channelswindow.cpp  chatwindow.cpp  chatwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/ChannelWidget/: channelwidget.cpp  channelwidget.h
src/gui/LoginWidget/: loginwidget.cpp  loginwidget.h
src/gui/MessageWidget/: messagewidget.cpp  messagewidget.h  messagewidget.ui
src/gui/delegate/: channeldelegate.cpp  chatdelegate.cpp  chatdelegate.h
src/gui/models/: channelsmodel.cpp  channelsmodel.h  chatmodel.cpp
tool/: script_conan.sh
